# apollo_and_-autoware_path_planner

./: QP_path_planner.py  README.md  apollo_planner_issue相关.txt  planning_学习笔记.txt  planning学习
Apollo_PiecewiseJerk_algorithm/: CMakeLists.txt  README
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/: Makefile  config.status  libtool
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/: Makefile  config.status  ipopt-uninstalled.pc  ipopt.pc  ipoptamplinterface-uninstalled.pc  ipoptamplinterface.pc
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/contrib/JavaInterface/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/doxydoc/: doxygen.conf
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/examples/Cpp_example/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/examples/ScalableProblems/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/examples/hs071_c/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/examples/hs071_cpp/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/examples/hs071_f/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/src/Algorithm/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/src/Apps/: Makefile
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/Ipopt/test/: Makefile  hs071_c  hs071_cpp  hs071_f
Apollo_PiecewiseJerk_algorithm/Ipopt-3.12.7/doxydoc/: doxygen.conf
Apollo_PiecewiseJerk_algorithm/include/: ConstantJerkTrajectory1d.hpp  Curve1d.hpp  PiecewiseJerkProblem.hpp  PiecewiseJerkSpeedNonlinearIpoptInterface.hpp  PiecewiseJerkSpeedOptimizer.hpp  PiecewiseJerkSpeed_nonlinear_Optimizer.hpp  SpeedData.hpp  SpeedPoint.hpp
Apollo_PiecewiseJerk_algorithm/plot/: path_optimizer.csv  plot.py  ref.csv  st_test.csv  v_test.csv
Apollo_PiecewiseJerk_algorithm/src/: IpoptInterface.cpp  PathPoint.cpp  PiecewiseJerkProblem.cpp  PiecewiseJerkSpeedNonlinearIpoptInterface.cpp  PiecewiseJerkSpeedOptimizer.cpp  PiecewiseJerkSpeed_nonlinear_Optimizer.cpp  SpeedData.cpp  SpeedLimit.cpp  SpeedProfileGenerator.cpp  demo.cpp  demo_PiecewiseJerkPathOptimizer.cpp  demo_PiecewiseJerkSpeedOptimizer.cpp
Apollo_speed_planner/: CMakeLists.txt  (+1 more)
DP_speed_planner/: CMakeCache.txt  CMakeLists.txt  DP_Speed_Planner  Makefile  ST_graph  cmake_install.cmake
DP_speed_planner/include/: DP_speed_planner.h
DP_speed_planner/src/: DP_speed_planner.cpp
QP_path_planner/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matplotlibcpp.h  osqp_demo  osqp_demo.cc  osqp_problem.cc  osqp_problem.h
op_local_planner/: CMakeLists.txt  local_map_ROI.csv  local_map_ROI_best.csv  local_map_ROI_center.csv  local_map_ROI_obstacle.csv  plot.py
op_local_planner/include/geometry_msgs/: Accel.h  AccelStamped.h  AccelWithCovariance.h  AccelWithCovarianceStamped.h  Inertia.h  InertiaStamped.h  Point.h  Point32.h  PointStamped.h  Polygon.h  PolygonStamped.h  Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  QuaternionStamped.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  TwistWithCovarianceStamped.h  Vector3.h  Vector3Stamped.h  Wrench.h  WrenchStamped.h
op_local_planner/include/local_trajectory_generator/: local_trajectory_generator.h
op_local_planner/include/rollout_generator/: rollout_generator.h
op_local_planner/include/ros/: common.h
op_local_planner/include/smartcar_msgs/: ControlCommand.h  ControlCommandStamped.h  DetectedObject.h  DetectedObjectArray.h  ImageLaneObjects.h  ImageObj.h  ImageObjRanged.h  ImageObjTracked.h  ImageObjects.h  ImageRect.h  ImageRectRanged.h  Lane.h  LaneArray.h  PointsImage.h  ProjectionMatrix.h  TrafficLight.h  TrafficLightResult.h  TrafficLightResultArray.h  Waypoint.h
op_local_planner/include/utils/: common.h  utils.h
op_local_planner/src/local_trajectory_generator/: local_trajectory_generator.cpp  local_trajectory_generator_node.cpp
op_local_planner/src/rollout_generator/: rollout_generator.cpp  rollout_generator_node.cpp
op_local_planner/src/utils/: utils.cpp
(+308 files in other folders)
